--- a/roles/mikeandwan_us/tasks/maw_pull_images.yml
+++ b/roles/mikeandwan_us/tasks/maw_pull_images.yml
@@ -3,14 +3,14 @@
   containers.podman.podman_image:
     name: "{{ item }}"
   loop:
-    - "{{ mawus__podman_image_postgres }}"
-    - "{{ mawus__podman_image_solr }}"
-    - "{{ mawus__podman_image_photos }}"
-    - "{{ mawus__podman_image_files }}"
-    - "{{ mawus__podman_image_gateway }}"
-    - "{{ mawus__podman_image_maw_certs }}"
-    - "{{ mawus__podman_image_certbot }}"
-    - "{{ mawus__podman_image_solr_indexer }}"
-    - "{{ mawus__podman_image_reverse_geocode }}"
-    - "{{ mawus__podman_image_gdrive }}"
+    - "{{ maw__podman_image_postgres }}"
+    - "{{ maw__podman_image_solr }}"
+    - "{{ maw__podman_image_photos }}"
+    - "{{ maw__podman_image_files }}"
+    - "{{ maw__podman_image_gateway }}"
+    - "{{ maw__podman_image_maw_certs }}"
+    - "{{ maw__podman_image_certbot }}"
+    - "{{ maw__podman_image_solr_indexer }}"
+    - "{{ maw__podman_image_reverse_geocode }}"
+    - "{{ maw__podman_image_gdrive }}"
   when: item | length > 0
