--- a/playbook_maw_dev.yml
+++ b/playbook_maw_dev.yml
@@ -20,7 +20,7 @@
         name: podman_init
       vars:
         pod_init__linger_users:
-          - "{{ mawus__username }}"
+          - "{{ maw__username }}"
 
     - name: Ensure git directory exists
       ansible.builtin.file:
