--- a/roles/mikeandwan_us/tasks/main.yml
+++ b/roles/mikeandwan_us/tasks/main.yml
@@ -2,42 +2,42 @@
 - name: Include maw_hostnames.yml
   ansible.builtin.include_tasks: maw_hostnames.yml
   loop:
-    - "{{ mawus__fqdn_naked }}"
-    - "{{ mawus__fqdn_api }}"
-    - "{{ mawus__fqdn_auth }}"
-    - "{{ mawus__fqdn_files }}"
-    - "{{ mawus__fqdn_photos }}"
-    - "{{ mawus__fqdn_www }}"
+    - "{{ maw__fqdn_naked }}"
+    - "{{ maw__fqdn_api }}"
+    - "{{ maw__fqdn_auth }}"
+    - "{{ maw__fqdn_files }}"
+    - "{{ maw__fqdn_photos }}"
+    - "{{ maw__fqdn_www }}"
 
 - name: Include port_mapping.yml
   ansible.builtin.include_tasks: port_mapping.yml
-  when: mawus__allow_low_ports
+  when: maw__allow_low_ports
 
 - name: Initialize host directories
   ansible.builtin.include_tasks: maw_host_directories.yml
   vars:
     asset_dirs:
-      - "{{ mawus__asset_dir_images }}"
-      - "{{ mawus__asset_dir_movies }}"
+      - "{{ maw__asset_dir_images }}"
+      - "{{ maw__asset_dir_movies }}"
 
 - name: Include maw_admin_scripts
   ansible.builtin.include_role:
     name: maw_admin_scripts
     apply:
       become: true
-      become_user: "{{ mawus__username }}"
+      become_user: "{{ maw__username }}"
   vars:
     maw_as__dir: "{{ remote_mawus_root }}/admin_scripts"
-    maw_as__do_backup: "{{ mawus__env == 'prod' }}"
-    maw_as__pod: "{{ mawus__podman_pod }}"
-    maw_as__postgres_envfile: "{{ mawus__podman_env_dir }}/maw-postgres.env"
-    maw_as__postgres_image: "{{ mawus__podman_image_postgres }}"
-    maw_as__certbot_image: "{{ mawus__podman_image_certbot }}"
-    maw_as__gdrive_image: "{{ mawus__podman_image_gdrive }}"
-    maw_as__cache_sync_image: "{{ mawus__podman_image_cache_sync }}"
-    maw_as__maw_certs_image: "{{ mawus__podman_image_maw_certs }}"
-    maw_as__reverse_geocode_image: "{{ mawus__podman_image_reverse_geocode }}"
-    maw_as__solr_indexer: "{{ mawus__podman_image_solr_indexer }}"
+    maw_as__do_backup: "{{ maw__env == 'prod' }}"
+    maw_as__pod: "{{ maw__podman_pod }}"
+    maw_as__postgres_envfile: "{{ maw__podman_env_dir }}/maw-postgres.env"
+    maw_as__postgres_image: "{{ maw__podman_image_postgres }}"
+    maw_as__certbot_image: "{{ maw__podman_image_certbot }}"
+    maw_as__gdrive_image: "{{ maw__podman_image_gdrive }}"
+    maw_as__cache_sync_image: "{{ maw__podman_image_cache_sync }}"
+    maw_as__maw_certs_image: "{{ maw__podman_image_maw_certs }}"
+    maw_as__reverse_geocode_image: "{{ maw__podman_image_reverse_geocode }}"
+    maw_as__solr_indexer: "{{ maw__podman_image_solr_indexer }}"
   when: ansible_connection != 'local'
 
 - name: Include maw_pull_images.yml
@@ -45,53 +45,53 @@
     file: maw_pull_images.yml
     apply:
       become: true
-      become_user: "{{ mawus__username }}"
+      become_user: "{{ maw__username }}"
 
 - name: Include maw_volumes_create.yml
   ansible.builtin.include_tasks:
     file: maw_volumes_create.yml
     apply:
       become: true
-      become_user: "{{ mawus__username }}"
+      become_user: "{{ maw__username }}"
 
 - name: Include maw_volumes_populate.yml
   ansible.builtin.include_tasks:
     file: maw_volumes_populate.yml
     apply:
       become: true
-      become_user: "{{ mawus__username }}"
+      become_user: "{{ maw__username }}"
 
 - name: Initialize self signed certificates
   ansible.builtin.include_tasks:
     file: maw_certs.yml
     apply:
       become: true
-      become_user: "{{ mawus__username }}"
+      become_user: "{{ maw__username }}"
 
 - name: Obtain self signed certificate passwords
   ansible.builtin.include_tasks:
     file: maw_certs_get_pwds.yml
     apply:
       become: true
-      become_user: "{{ mawus__username }}"
+      become_user: "{{ maw__username }}"
 
 - name: Include maw_maintenance.yml
   ansible.builtin.include_tasks:
     file: maw_maintenance.yml
     apply:
       become: true
-      become_user: "{{ mawus__username }}"
+      become_user: "{{ maw__username }}"
 
 - name: Include maw_env_files.yml
   ansible.builtin.include_tasks:
     file: maw_env_files.yml
     apply:
       become: true
-      become_user: "{{ mawus__username }}"
+      become_user: "{{ maw__username }}"
 
 - name: Include maw_pod.yml
   ansible.builtin.include_tasks:
     file: maw_pod.yml
     apply:
       become: true
-      become_user: "{{ mawus__username }}"
+      become_user: "{{ maw__username }}"
