--- a/roles/mikeandwan_us/tasks/maw_certs.yml
+++ b/roles/mikeandwan_us/tasks/maw_certs.yml
@@ -1,23 +1,23 @@
 ---
 - name: set the cert dir / volume name and fqdn prefix
   ansible.builtin.set_fact:
-    cert_vol: "{{ (maw_cert_volume.volume is defined) | ternary(maw_cert_volume.volume.Name, mawus__certs_dir) }}"
-    cert_fqdn_prefix: "{{ (mawus__env == 'prod') | ternary('', mawus__env) }}"
+    cert_vol: "{{ (maw_cert_volume.volume is defined) | ternary(maw_cert_volume.volume.Name, maw__certs_dir) }}"
+    cert_fqdn_prefix: "{{ (maw__env == 'prod') | ternary('', maw__env) }}"
 
 - name: ensure cert dir exists for local projects
   ansible.builtin.file:
-    path: "{{ mawus__certs_dir }}"
+    path: "{{ maw__certs_dir }}"
     state: directory
     mode: u+rwx
-  when: mawus__certs_dir | length > 0
+  when: maw__certs_dir | length > 0
 
 # if you add a new environment, you may need to update the maw-certs image to be able to generate certs for the new env
 # todo: add logic to maw-certs to dynamically accept new env name
 - name: initialize internal certs
   containers.podman.podman_container:
     name: maw-certs
-    image: "{{ mawus__podman_image_maw_certs }}"
-    command: "{{ mawus__env }} {{ cert_fqdn_prefix }}"
+    image: "{{ maw__podman_image_maw_certs }}"
+    command: "{{ maw__env }} {{ cert_fqdn_prefix }}"
     state: started
     interactive: true
     volume:
@@ -44,11 +44,11 @@
       become_user: root
       become: true
       ansible.builtin.copy:
-        dest: "/usr/share/pki/ca-trust-source/anchors/maw_{{ mawus__env }}_{{ item | basename }}"
+        dest: "/usr/share/pki/ca-trust-source/anchors/maw_{{ maw__env }}_{{ item | basename }}"
         src: "{{ item }}"
         mode: u+rw,go+r
       with_fileglob:
-        - "{{ mawus__certs_dir }}/ca/ca_*.crt"
+        - "{{ maw__certs_dir }}/ca/ca_*.crt"
 
     - name: Make the system aware of the new ca certs
       become_user: root
@@ -58,8 +58,8 @@
 
     - name: load cert pwds into variables for subsequent steps
       ansible.builtin.set_fact:
-        mawus__pfx_pwd_api: "{{ lookup('file', remote_mawus_root + '/certs/api/api.pfx.pwd') }}"
-        mawus__pfx_pwd_auth: "{{ lookup('file', remote_mawus_root + '/certs/auth/auth.pfx.pwd') }}"
-        mawus__pfx_pwd_www: "{{ lookup('file', remote_mawus_root + '/certs/www/www.pfx.pwd') }}"
+        maw__pfx_pwd_api: "{{ lookup('file', remote_mawus_root + '/certs/api/api.pfx.pwd') }}"
+        maw__pfx_pwd_auth: "{{ lookup('file', remote_mawus_root + '/certs/auth/auth.pfx.pwd') }}"
+        maw__pfx_pwd_www: "{{ lookup('file', remote_mawus_root + '/certs/www/www.pfx.pwd') }}"
 
-  when: mawus__certs_dir | length > 0
+  when: maw__certs_dir | length > 0
