--- a/roles/mikeandwan_us/tasks/maw_maintenance.yml
+++ b/roles/mikeandwan_us/tasks/maw_maintenance.yml
@@ -4,26 +4,26 @@
     name: certbot_renew
   vars:
     cb__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-    cb__service_name: "{{ mawus__env }}-certbot-renew"
+    cb__service_name: "{{ maw__env }}-certbot-renew"
     cb__start_job: false
-    cb__enable_job: "{{ mawus__env == 'prod' }}"
+    cb__enable_job: "{{ maw__env == 'prod' }}"
     cb__calendar: '0/12:00:00'
-    cb__pod: "{{ mawus__podman_pod }}"
-    cb__container_image: "{{ mawus__podman_image_certbot }}"
+    cb__pod: "{{ maw__podman_pod }}"
+    cb__container_image: "{{ maw__podman_image_certbot }}"
     cb__validation_volume: "{{ certbot_validation_volume.volume.Name }}"
     cb__certs_volume: "{{ certbot_certs_volume.volume.Name }}"
-  when: mawus__env == 'prod'
+  when: maw__env == 'prod'
 
 - name: Configure Reverse Geocoder
   ansible.builtin.include_role:
     name: reverse_geocoder
   vars:
     rev_geo__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-    rev_geo__service: "{{ mawus__env }}-reverse-geocoder"
-    rev_geo__pod: "{{ mawus__podman_pod }}"
+    rev_geo__service: "{{ maw__env }}-reverse-geocoder"
+    rev_geo__pod: "{{ maw__podman_pod }}"
     rev_geo__volume: "{{ reverse_geocode_volume.volume.Name }}"
-    rev_geo__envfile: "{{ mawus__podman_env_dir }}/maw-reverse-geocode.env"
-    rev_geo__image: "{{ mawus__podman_image_reverse_geocode }}"
+    rev_geo__envfile: "{{ maw__podman_env_dir }}/maw-reverse-geocode.env"
+    rev_geo__image: "{{ maw__podman_image_reverse_geocode }}"
     rev_geo__calendar: '00:45:00'
 
 - name: Configure Postgres Role Backup
@@ -31,11 +31,11 @@
     name: postgres_backup_roles
   vars:
     pg_bu_roles__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-    pg_bu_roles__service: "{{ mawus__env }}-postgres-backup-roles"
-    pg_bu_roles__pod: "{{ mawus__podman_pod }}"
+    pg_bu_roles__service: "{{ maw__env }}-postgres-backup-roles"
+    pg_bu_roles__pod: "{{ maw__podman_pod }}"
     pg_bu_roles__volume: "{{ postgres_backup_volume.volume.Name }}"
-    pg_bu_roles__envfile: "{{ mawus__podman_env_dir }}/maw-postgres.env"
-    pg_bu_roles__postgres_image: "{{ mawus__podman_image_postgres }}"
+    pg_bu_roles__envfile: "{{ maw__podman_env_dir }}/maw-postgres.env"
+    pg_bu_roles__postgres_image: "{{ maw__podman_image_postgres }}"
     pg_bu_roles__calendar: '00:55:00'
 
 - name: Configure postgres backup for maw_website database
@@ -43,11 +43,11 @@
     name: postgres_backup_database
   vars:
     pg_bu_db__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-    pg_bu_db__service: "{{ mawus__env }}-postgres-backup-mawus"
-    pg_bu_db__pod: "{{ mawus__podman_pod }}"
+    pg_bu_db__service: "{{ maw__env }}-postgres-backup-mawus"
+    pg_bu_db__pod: "{{ maw__podman_pod }}"
     pg_bu_db__volume: "{{ postgres_backup_volume.volume.Name }}"
-    pg_bu_db__envfile: "{{ mawus__podman_env_dir }}/maw-postgres.env"
-    pg_bu_db__postgres_image: "{{ mawus__podman_image_postgres }}"
+    pg_bu_db__envfile: "{{ maw__podman_env_dir }}/maw-postgres.env"
+    pg_bu_db__postgres_image: "{{ maw__podman_image_postgres }}"
     pg_bu_db__db: maw_website
     pg_bu_db__calendar: '01:00:00'
 
@@ -56,11 +56,11 @@
     name: postgres_backup_database
   vars:
     pg_bu_db__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-    pg_bu_db__service: "{{ mawus__env }}-postgres-backup-idsrv"
-    pg_bu_db__pod: "{{ mawus__podman_pod }}"
+    pg_bu_db__service: "{{ maw__env }}-postgres-backup-idsrv"
+    pg_bu_db__pod: "{{ maw__podman_pod }}"
     pg_bu_db__volume: "{{ postgres_backup_volume.volume.Name }}"
-    pg_bu_db__envfile: "{{ mawus__podman_env_dir }}/maw-postgres.env"
-    pg_bu_db__postgres_image: "{{ mawus__podman_image_postgres }}"
+    pg_bu_db__envfile: "{{ maw__podman_env_dir }}/maw-postgres.env"
+    pg_bu_db__postgres_image: "{{ maw__podman_image_postgres }}"
     pg_bu_db__db: idsrv
     pg_bu_db__calendar: '01:05:00'
 
@@ -69,10 +69,10 @@
     name: postgres_optimize
   vars:
     pg_optimize__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-    pg_optimize__service: "{{ mawus__env }}-postgres-optimize-mawus"
-    pg_optimize__pod: "{{ mawus__podman_pod }}"
-    pg_optimize__envfile: "{{ mawus__podman_env_dir }}/maw-postgres.env"
-    pg_optimize__postgres_image: "{{ mawus__podman_image_postgres }}"
+    pg_optimize__service: "{{ maw__env }}-postgres-optimize-mawus"
+    pg_optimize__pod: "{{ maw__podman_pod }}"
+    pg_optimize__envfile: "{{ maw__podman_env_dir }}/maw-postgres.env"
+    pg_optimize__postgres_image: "{{ maw__podman_image_postgres }}"
     pg_optimize__db: maw_website
     pg_optimize__calendar: '01:10:00'
 
@@ -81,10 +81,10 @@
     name: postgres_optimize
   vars:
     pg_optimize__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-    pg_optimize__service: "{{ mawus__env }}-postgres-optimize-idsrv"
-    pg_optimize__pod: "{{ mawus__podman_pod }}"
-    pg_optimize__envfile: "{{ mawus__podman_env_dir }}/maw-postgres.env"
-    pg_optimize__postgres_image: "{{ mawus__podman_image_postgres }}"
+    pg_optimize__service: "{{ maw__env }}-postgres-optimize-idsrv"
+    pg_optimize__pod: "{{ maw__podman_pod }}"
+    pg_optimize__envfile: "{{ maw__podman_env_dir }}/maw-postgres.env"
+    pg_optimize__postgres_image: "{{ maw__podman_image_postgres }}"
     pg_optimize__db: idsrv
     pg_optimize__calendar: '01:15:00'
 
@@ -93,9 +93,9 @@
     name: postgres_backup_cleanup
   vars:
     pg_clean__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-    pg_clean__service: "{{ mawus__env }}-postgres-cleanup"
-    pg_clean__postgres_image: "{{ mawus__podman_image_postgres }}"
-    pg_clean__pod: "{{ mawus__podman_pod }}"
+    pg_clean__service: "{{ maw__env }}-postgres-cleanup"
+    pg_clean__postgres_image: "{{ maw__podman_image_postgres }}"
+    pg_clean__pod: "{{ maw__podman_pod }}"
     pg_clean__volume: "{{ postgres_backup_volume.volume.Name }}"
     pg_clean__calendar: '01:20:00'
 
@@ -104,12 +104,12 @@
     name: postgres_gdrive_archive
   vars:
     pg_archive__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-    pg_archive__service: "{{ mawus__env }}-postgres-archive-daily"
-    pg_archive__pod: "{{ mawus__podman_pod }}"
+    pg_archive__service: "{{ maw__env }}-postgres-archive-daily"
+    pg_archive__pod: "{{ maw__podman_pod }}"
     pg_archive__files_to_archive_volume: "{{ postgres_backup_volume.volume.Name }}"
     pg_archive__credentials_volume: "{{ gdrive_creds_volume.volume.Name }}"
-    pg_archive__gdrive_image: "{{ mawus__podman_image_gdrive }}"
-    pg_archive__gdrive_folder: "{{ mawus__podman_pod }}-{{ ansible_host }}-pg_backup"
+    pg_archive__gdrive_image: "{{ maw__podman_image_gdrive }}"
+    pg_archive__gdrive_folder: "{{ maw__podman_pod }}-{{ ansible_host }}-pg_backup"
     pg_archive__retain_duration: '10d'
     pg_archive__calendar: '01:25:00'
 
@@ -118,11 +118,11 @@
     name: postgres_gdrive_archive
   vars:
     pg_archive__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-    pg_archive__service: "{{ mawus__env }}-postgres-archive-monthly"
-    pg_archive__pod: "{{ mawus__podman_pod }}"
+    pg_archive__service: "{{ maw__env }}-postgres-archive-monthly"
+    pg_archive__pod: "{{ maw__podman_pod }}"
     pg_archive__files_to_archive_volume: "{{ postgres_backup_volume.volume.Name }}"
     pg_archive__credentials_volume: "{{ gdrive_creds_volume.volume.Name }}"
-    pg_archive__gdrive_image: "{{ mawus__podman_image_gdrive }}"
-    pg_archive__gdrive_folder: "{{ mawus__podman_pod }}-{{ ansible_host }}-pg_backup-monthly"
+    pg_archive__gdrive_image: "{{ maw__podman_image_gdrive }}"
+    pg_archive__gdrive_folder: "{{ maw__podman_pod }}-{{ ansible_host }}-pg_backup-monthly"
     pg_archive__retain_duration: '2y'
     pg_archive__calendar: '*-*-01 01:30:00'
