--- a/roles/mikeandwan_us/tasks/maw_postgres_restore_db.yml
+++ b/roles/mikeandwan_us/tasks/maw_postgres_restore_db.yml
@@ -1,9 +1,9 @@
 - name: "test if {{ db_name }} database exists"
   containers.podman.podman_container:
-    name: "{{ mawus__env }}-maw-pginit-restore-test"
-    pod: "{{ mawus__podman_pod }}"
-    image: "{{ mawus__podman_image_postgres }}"
-    env_file: "{{ mawus__podman_env_dir }}/maw-postgres.env"
+    name: "{{ maw__env }}-maw-pginit-restore-test"
+    pod: "{{ maw__podman_pod }}"
+    image: "{{ maw__podman_image_postgres }}"
+    env_file: "{{ maw__podman_env_dir }}/maw-postgres.env"
     command:
       - psql
       - '-h'
@@ -22,7 +22,7 @@
   ansible.builtin.include_role:
     name: podman_wait_for_stop
   vars:
-    pod_stop__container_name: "{{ mawus__env }}-maw-pginit-restore-test"
+    pod_stop__container_name: "{{ maw__env }}-maw-pginit-restore-test"
     pod_stop__result_varname: sql_test_result
 
 - name: set variable to determine if restore steps should be executed
@@ -31,10 +31,10 @@
 
 - name: "restore {{ db_name }} database"
   containers.podman.podman_container:
-    name: "{{ mawus__env }}-maw-pginit-restore"
-    pod: "{{ mawus__podman_pod }}"
-    image: "{{ mawus__podman_image_postgres }}"
-    env_file: "{{ mawus__podman_env_dir }}/maw-postgres.env"
+    name: "{{ maw__env }}-maw-pginit-restore"
+    pod: "{{ maw__podman_pod }}"
+    image: "{{ maw__podman_image_postgres }}"
+    env_file: "{{ maw__podman_env_dir }}/maw-postgres.env"
     command: "pg_restore -h 127.0.0.1 -U postgres -C -d postgres /postgres_backup/{{ backup_file }}"
     state: started
     interactive: true
@@ -48,7 +48,7 @@
   ansible.builtin.include_role:
     name: podman_wait_for_stop
   vars:
-    pod_stop__container_name: "{{ mawus__env }}-maw-pginit-restore"
+    pod_stop__container_name: "{{ maw__env }}-maw-pginit-restore"
     pod_stop__result_varname: restore_result
   when: do_restore_steps
 
@@ -60,10 +60,10 @@
 
 - name: "optimize {{ db_name }} database"
   containers.podman.podman_container:
-    name: "{{ mawus__env }}-maw-pginit-optimize"
-    pod: "{{ mawus__podman_pod }}"
-    image: "{{ mawus__podman_image_postgres }}"
-    env_file: "{{ mawus__podman_env_dir }}/maw-postgres.env"
+    name: "{{ maw__env }}-maw-pginit-optimize"
+    pod: "{{ maw__podman_pod }}"
+    image: "{{ maw__podman_image_postgres }}"
+    env_file: "{{ maw__podman_env_dir }}/maw-postgres.env"
     command:
       - psql
       - '-h'
@@ -82,7 +82,7 @@
   ansible.builtin.include_role:
     name: podman_wait_for_stop
   vars:
-    pod_stop__container_name: "{{ mawus__env }}-maw-pginit-optimize"
+    pod_stop__container_name: "{{ maw__env }}-maw-pginit-optimize"
     pod_stop__result_varname: optimize_result
   when: do_restore_steps
 
