--- a/roles/mikeandwan_us/tasks/maw_postgres_set_role_password.yml
+++ b/roles/mikeandwan_us/tasks/maw_postgres_set_role_password.yml
@@ -1,9 +1,9 @@
 - name: set role password
   containers.podman.podman_container:
-    name: "{{ mawus__env }}-maw-pginit-role-password"
-    pod: "{{ mawus__podman_pod }}"
-    image: "{{ mawus__podman_image_postgres }}"
-    env_file: "{{ mawus__podman_env_dir }}/maw-postgres.env"
+    name: "{{ maw__env }}-maw-pginit-role-password"
+    pod: "{{ maw__podman_pod }}"
+    image: "{{ maw__podman_image_postgres }}"
+    env_file: "{{ maw__podman_env_dir }}/maw-postgres.env"
     interactive: true
     state: started
     command:
@@ -21,7 +21,7 @@
   ansible.builtin.include_role:
     name: podman_wait_for_stop
   vars:
-    pod_stop__container_name: "{{ mawus__env }}-maw-pginit-role-password"
+    pod_stop__container_name: "{{ maw__env }}-maw-pginit-role-password"
     pod_stop__result_varname: role_pwd_result
 
 - name: fail if password not set
