--- a/inventories/group_vars/maw_prod.yml
+++ b/inventories/group_vars/maw_prod.yml
@@ -81,17 +81,17 @@ maw__sql_solr_password: "{{ vault_password_sql_solr }}"
 maw__google_api_key: "{{ vault_google_api_key }}"
 
 # mawus redis settings
-mawus_redis__version: 6
-mawus_redis__pod: "{{ maw__podman_pod }}"
-mawus_redis__image: "docker.io/redis:{{ mawus_redis__version }}-alpine"
-mawus_redis__container: "{{ maw__env }}-maw-redis"
-mawus_redis__volume: "{{ maw__env }}-maw-redis-{{ mawus_redis__version }}"
-mawus_redis__cache_sync_image: docker.io/aerisg222/maw-cache-sync:latest
-mawus_redis__cache_sync_container: "{{ maw__env }}-maw-cache-sync"
-mawus_redis__cache_sync_envfile: "{{ maw__podman_env_dir }}/maw-cache-sync.env"
-mawus_redis__cache_sync_envfile_backup: true
-mawus_redis__cache_sync_sql_username: "{{ maw__sql_username }}"
-mawus_redis__cache_sync_sql_password: "{{ maw__sql_password }}"
+maw_redis__version: 6
+maw_redis__pod: "{{ maw__podman_pod }}"
+maw_redis__image: "docker.io/redis:{{ maw_redis__version }}-alpine"
+maw_redis__container: "{{ maw__env }}-maw-redis"
+maw_redis__volume: "{{ maw__env }}-maw-redis-{{ maw_redis__version }}"
+maw_redis__cache_sync_image: docker.io/aerisg222/maw-cache-sync:latest
+maw_redis__cache_sync_container: "{{ maw__env }}-maw-cache-sync"
+maw_redis__cache_sync_envfile: "{{ maw__podman_env_dir }}/maw-cache-sync.env"
+maw_redis__cache_sync_envfile_backup: true
+maw_redis__cache_sync_sql_username: "{{ maw__sql_username }}"
+maw_redis__cache_sync_sql_password: "{{ maw__sql_password }}"
 
 # mawus solr settings
 mawus_solr__version: 8
